# tweet-in-love

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/: api.py  io.py  main.py
models/model_web_sm_01/model-best/: meta.json
models/model_web_sm_01/model-best/textcat/: cfg
models/model_web_sm_01/model-last/: config.cfg  meta.json
models/model_web_sm_01/model-last/vocab/: strings.json
notebooks/: 00.style.ipynb  01.data exploration.ipynb  02.train-test-split.ipynb  03.preprocess-train-sklearn.ipynb  03.preprocess.ipynb  04. train-nn.ipynb  04. training.ipynb  05.load-predict.ipynb  web_lg.cfg
tests/: test_api  test_preprocess.py  test_settings.py
tweet_in_love/: __init__.py  predictor.py  preprocess.py  preprocessor.py  settings.py
